--- a/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
+++ b/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
@@ -403,7 +403,7 @@ This section outlines how the use of GDP concepts and supporting resources struc
 
 An exchange from Vignette 3 between participants Ed(c) and Mark(p) shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work more systematically. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). Mark becomes _overwhelmed_ with the child's lack of focus on one pattern "_that’s what I mean, you can’t just skip around like that_."[^v3] This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. In a session in P3, Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning [^v6].
 
-Other pairs take advantage of paper prototyping. For example, Susanna notices her child's difficulty in using cursor,  delete, adn backspace keys to edit a matrix allowing level design. In response, the parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs [^pp].
+Other pairs take advantage of paper prototyping. For example, Susanna notices her child's difficulty in using cursor, delete, and backspace keys to edit a matrix allowing level design. In response, the parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs [^pp].
 
 The following exchange (Table 6.x) captures a moment where the GDP concepts are used to structure a ideation proposing a more radical change of underlying game genre.
 
@@ -419,9 +419,9 @@ The following exchange (Table 6.x) captures a moment where the GDP concepts are 
 | Toby: Hmm. How should I do this then?<br>Dan: That’s a good question. Shall we ask Mick to see if that would mess things up or not? |  |
 
 
-In the vignette extract above, Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas using home-based knowledge of GDP mechanics within this interpersonal plane. Dan draws on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to discuss breaking out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
+In the vignette extract above, Dan(p) helps Toby(c) via guided facilitation to provoke and shape new design ideas using home-based knowledge of GDP mechanics within this interpersonal plane. Dan draws on the game playing experiences to promote innovation in the design of the existing template: "the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?" The pair use their knowledge of game play patterns and genre conventions to discuss breaking out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such we see them developing a new shared vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
 
-The use of GDPs as a lingua franca as proposed by Erickson [-@erickson_lingua_2000] and Erikisson [-@eriksson_using_2019] (two different researchers) who detail the verbal use of GDP terms by participants in a collaborative design process. (BOTH?) The observations of this section support the proposals of the utility of collective, emergent use of pattern languages within communities working on projects. Here, they show specfically the potential for GDPs to be within ideation, prioritisation and clarification. In addition they show that as well as a verbal lingua franca, GDPs can be a valuable component of gestural interaction, and visually-oriented prototyping tools, be they digital or paper based.
+The  research by Erickson [-@erickson_lingua_2000] and Erikisson [-@eriksson_using_2019] (two different researchers) who detail use of design patterns and GDPs in particular, as a lingua franca to facilitate collaboration within design processes. The observations of this section (and the chapter more generally) support and extend existing research on the utility of collective, emergent use of pattern languages within communities working on projects. Here, data shows this potential for GDPs within ideation, prioritisation and clarification. It indicates that as well as a verbal lingua franca, GDPs can be a valuable component of gestural interaction, and visually-oriented prototyping tools, be they digital or paper based.
 
 <!-- IS SOME SYNTHESIS NEEDED TO END THIS SECTION? -->
 
@@ -463,7 +463,7 @@ I now turn to the use of GDPs within processes of division of labour, a process 
 
 Susanna(p) and Tehillah(c) working process relied on the parent to do the majority of code implementation on one shared one computer. The parent took a lead on many activities but took care that the pair alternated between use of keyboard and mouse. This provided the child  with hands-on experience when possible, particularly in level design activities and playtesting [^st1]. In interview data, the parent notes _"I resist the urge to fix things immediately when she (Tehillah(c)) struggles."_  Another exchange from Vignette 2 is described below.  
 
-    Tehillah(c) uses the name of a GDP within a request for her parent to take on a specific task within their making process, "Go on then. Key-Door person." When the parent expresses confusion about what this statment means, Tehillah gestures with her hands to indicate that her mother is the person she is referring to. The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother.
+    Tehillah(c) uses the name of a GDP within a request for her parent to take on a specific task within their making process, "Go on then. Key-Door person." When the parent expresses confusion about what this statement means, Tehillah gestures with her hands to indicate that her mother is the person she is referring to. The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother.
 
 At times, Susanna asked Tehillah to seek help from facilitator. On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. Tehillah  also carried out more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
 
@@ -491,7 +491,7 @@ In contrast some participants took on different roles while working on the same 
 
 Similarly, some young people and parents began to take on specialist and distributed roles related to a developing identity. This is present in the example of Nasrin(c) and Madiha(p) in Vignette 5 where both are oriented to developing higher quality graphical assets, but Nasrin also adopts a technical support role for her mother.  
 
-Data also uncovered  ways in which the participant divided the process of game making, in ways which uncovered traces of home collaboration practices. For example, Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture [^cd].
+Data also demonstrated ways in which the participant divided the process of game making, in ways which uncovered traces of home collaboration practices. For example, Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture [^cd].
 
 
 The analysis here contributes grounded examples to existing strands of research addressing division of labour within CGD&P and related learning in informal technology settings.
@@ -654,7 +654,7 @@ exposed a tension that impacted his practice and decision to orient the focal cl
 
 <!-- THIS NEEDS TO BE MUCH MORE GROUNDED IN DATA - MOVE THEORY OUT -->
 
-This section outlines some of the ways GDP concepts can facilitate the incorporation of participants interests from outside this learning space, and wider repertoires of practice [^rpp]. In Chapter 5  I outlined the use of the MDA (mechanics, dynamics, and aesthetics) framework to theme the presentation of GDPs. In the following section I use the MDA themes to explore different examples of use of repertoires of home interests by participants.
+This section outlines some of the ways GDP concepts are mobilised in the incorporation of participants interests from outside this learning space, and wider repertoires of practice [^rpp]. In Chapter 5  I outlined the use of the MDA (mechanics, dynamics, and aesthetics) framework to theme the presentation of GDPs. In the following section I use the MDA themes to explore different examples of use of repertoires of home interests by participants.
 
 
 <!-- ![Illustration 6.x -  MDA as an additional framework promoting multiple means of engagement - mapped to an grouping of GDPs  ](./Pictures/ch_6_mda_dia_2.png){width=95%}
