--- a/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
+++ b/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
@@ -793,7 +793,7 @@ For many, this fluency incorporated improvisational characteristics. Clive (p) q
 
 The structuring of the learning design around the process of repeated implementation of GDPs appears to align with an iterative design thinking approach. However these observations of participant design behaviour did not align with  design cycle frameworks advocated within constructionist reasearch [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were instead fragmented and sometimes happened in parallel.  The video data contains many such improvisational approaches which incorporate ideation, planning, implementation, and testing in the space of a minute or so. Using Mark's words from in Vignette 3, for many, the process was far from systematic, involving a responsive "jumping around".
 
-While not supported by systematic data analysis, the findings of this chapter suggest a relationship between the fluid, expressive and improvisational behaviour described and the supporting resources which allowed choice over learner pathway, specifically which GDPs to implement and in which order. Certainly, this adaptation aligns with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016]. Thus, as a contribution to GGD&P research, my findings extending Basawapatna and colleagues [-[@basawapatna_zones_2013] approach to support flow via just in time documentation aligned with participants goal to support participant engagement, by providing  mechanisms, structured around a curated set of GDPs and a stage-based development. The findings of the chapter also offer an alternative to the graceful flow of represented in the creative design spiral (and similar representations design cycles), positioning practice for many as more responsive, messy, and productively chaotic process [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic].
+While not supported by systematic data analysis, the findings of this chapter suggest a relationship between the fluid, expressive and improvisational behaviour described and the supporting resources which allowed choice over learner pathway, specifically which GDPs to implement and in which order. Certainly, this adaptation aligns with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016]. Thus, as a contribution to CGD&P research, my findings extending Basawapatna and colleagues [-[@basawapatna_zones_2013] approach to support flow via just in time documentation aligned with participants goal to support participant engagement, by providing  mechanisms, structured around a curated set of GDPs and a stage-based development. The findings of the chapter also offer an alternative to the graceful flow of represented in the creative design spiral (and similar representations design cycles), positioning practice for many as more responsive, messy, and productively chaotic process [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic].
 
 Most specifically, the diverse meditational and motivational strategies of participants described in this chapter extend existing studies on use of GDPs, within educational context for young people. While Chapter 2 described a study addressed some areas of GDPs use within a game co-design process [@eriksson_using_2019], it was provided limited detail and focused primarily on utility of GDPs for researchers as a lingua franca and to structure analytical framing. The greater focus of my study on participant use of GDPs, in particular their importation from other contexts, their transformation within the developing idioculture of the game making context, and detailed description of the resulting variety of use extents this line of research significantly.
 
