--- a/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
+++ b/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
@@ -418,6 +418,10 @@ The following exchange (Table 6.x) captures a moment where the GDP concepts are 
 | Dan: So instead of... instead of the world… the world being sideways, we could have the world being looked down on. | Dan re-indicates the change of perspective with hand gestures. |
 | Toby: Hmm. How should I do this then?<br>Dan: That’s a good question. Shall we ask Mick to see if that would mess things up or not? |  |
 
+Table 6.x  - Vignette 6 Extract.
+
+![Illustration 6.x -  Indicating change of perspective via gesture  ](./Pictures/vign_6_1.png ){width=95%}
+
 
 In the vignette extract above, Dan(p) helps Toby(c) via guided facilitation to provoke and shape new design ideas using home-based knowledge of GDP mechanics within this interpersonal plane. Dan draws on the game playing experiences to promote innovation in the design of the existing template: "the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?" The pair use their knowledge of game play patterns and genre conventions to discuss breaking out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such we see them developing a new shared vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
 
