proof reading ch 5.

--- a/_archive/2025-7-5-Design_v17.md
+++ b/_archive/2025-7-5-Design_v17.md
@@ -68,12 +68,12 @@ title: 5. Findings - Design Narrative
 
 ## Chapter introduction
 
-This chapter presents a design narrative that traces the evolution of the learning environment developed in this research across different phases of implementation. The narrative approach adopted here is informed by design-based research (DBR) traditions and the analytical tools of third-generation activity theory (3GAT), as outlined in Chapter 3. This
-chapter demonstrate how changes in tools, documentation, and pedagogical strategies were shaped by participant need during phases 1 to 3 of the research [foot - as explained in Ch.4].
+This chapter presents a design narrative that traces the evolution of the learning environment developed in this research across different phases of implementation. The narrative approach adopted here is informed by design-based research (DBR) traditions and the analytical tools of third-generation activity theory (3GAT), as outlined in Chapter 3. This chapter demonstrates how changes in tools, documentation, and pedagogical strategies were shaped by participant need, focusing in particular on phases one to three of the research process.
 
-Design narratives are a useful DBR technique for describing situated, context-sensitive changes to an intervention over time [@hoadley_creating_2002-1; @bell_theoretical_2004]. Here, the narrative is grounded in the concrete details of the research setting and practices, and attends closely to how formative redesigns emerged in response to barriers encountered by participants. While Hoadley [-@hoadley_creating_2002] covers motivations of design narratives, there are not set forms. My design narrative, is an additive blend of contextual information, facilitator reflections, justifications of design changes and interwoven vignettes drawn from close observations of video data. By narrating the emergence and evolution of the learning design, this chapter contributes to the overall methodological project of the thesis: to develop a participatory, tool-mediated environment informed by a synthesis of CHAT and DBR processes. The narrative also begins the task of articulating the emerging design heuristics.
+Design narratives are a useful DBR technique for describing situated, context-sensitive changes to an intervention over time [@hoadley_creating_2002-1; @bell_theoretical_2004]. Here, the narrative is grounded in the concrete details of the research setting and practices, and attends closely to how formative redesigns emerged in response to barriers encountered by participants. While Hoadley [-@hoadley_creating_2002] covers motivations of design narratives, there are no set forms. My design narrative is an additive blend of contextual information, facilitator reflections, justifications of design changes, and interwoven vignettes drawn from close observations of video data. By narrating the emergence and evolution of the learning design, this chapter contributes to the overall methodological project of the thesis: to develop a participatory, tool-mediated environment informed by a synthesis of CHAT and DBR processes. The narrative also begins the task of articulating the emerging design heuristics.
 
 The chapter begins with a situated vignette that introduces the activity and its participants. This is followed by three major sections, each focused on a cluster of contradictions identified during the analysis. These cover tensions related to technical tools and accessibility, issues of navigation and documentation, and cultural or identity-based challenges in the coding process. Each section presents a sequence of problem identification, design response, and analysis of outcome or change, drawing on session notes, participant feedback, artefact analysis, and observations from the researcher’s journal.
+
 
 
 
