edits to chapters

--- a/_posts/thesis_chapters/2025-7-5-Design_v18.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v18.md
@@ -10,6 +10,7 @@ number-sections: true
 categories: chapter
 title: 5. Findings - Design Narrative
 ---
+
 -   [Findings: Design Narrative](#findings-design-narrative)
     -   [Chapter introduction](#chapter-introduction)
     -   [Vignette locating the game making
@@ -20,31 +21,19 @@ title: 5. Findings - Design Narrative
         -   [Contradiction area 1: involving organisational issues and
             the use of game programming and asset authoring
             tools](#contradiction-area-1-involving-organisational-issues-and-the-use-of-game-programming-and-asset-authoring-tools)
-            -   [Surfaced tensions and framed
-                contradiction](#surfaced-tensions-and-framed-contradiction)
         -   [Contradiction area 2: contradictions associated with
             project navigation and use of
             documentation](#contradiction-area-2-contradictions-associated-with-project-navigation-and-use-of-documentation)
-            -   [Description of what
-                happened](#description-of-what-happened)
-            -   [Surfaced tensions and framed
-                contradiction](#surfaced-tensions-and-framed-contradiction-1)
-            -   [Design response](#design-response)
-                -   [Quick Start Cards](#quick-start-cards)
-                -   [Structuring instructional tutorial resources and
-                    code
-                    snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
-            -   [Brief analysis](#brief-analysis)
         -   [Contradiction area 3: tensions and barriers in cultural
             aspects of the game-making
             activity](#contradiction-area-3-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [A staged based approach structured around a germ cell
+        -   [A stage-based approach structured around a germ cell
             concept of
-            GDPs](#a-staged-based-approach-structured-around-a-germ-cell-concept-of-gdps)
-        -   [Analysis and discussion in relation to existing research -
-            half-baked, and constructionist
-            heuristics](#analysis-and-discussion-in-relation-to-existing-research---half-baked-and-constructionist-heuristics)
+            GDPs](#a-stage-based-approach-structured-around-a-germ-cell-concept-of-gdps)
+        -   [Analysis and discussion in relation to existing research --
+            half-baked and constructionist
+            heuristics](#analysis-and-discussion-in-relation-to-existing-research-half-baked-and-constructionist-heuristics)
         -   [Synthesis of tensions and
             resolutions](#synthesis-of-tensions-and-resolutions)
         -   [3M game making (Meta) model of pedagogical elements of the
@@ -137,7 +126,7 @@ In P1, once participants began engaging with code, several tensions quickly surf
 
 
 <!-- ### Framed contradiction -->
-### Contradiction area 1: involving organisational issues and the use of game programming and asset authoring tools
+
 
 In line with CHAT analytical processes, I now synthesise emerging tensions as a contradiction. The use of a professional text-code language and framework was a contributing factor. While simplified, the structure of the starting template was still relatively complex for novices and offered no easy way into experimentation as advocated by a tinkering or bricolage approach [^12]. Many learners had ambitious ideas for their projects that were either beyond the scope of the framework or not realistic given their novice level [^13]. Regarding peer learning, while some learners became aware of each other's programming work, it was difficult to adapt bespoke additions from one project to another.
 
@@ -238,7 +227,7 @@ Together, these challenges surfaced a contradiction between an important compone
 
 <!-- INTERGRATE?
 In response, I developed several new artefacts intended to scaffold project navigation and reduce the bottleneck of real-time technical support. -->
-### Contradiction area 2: contradictions associated with project navigation and use of documentation
+
 
 Recalling my organisational crisis in P1 outlined in the section above, in response to my email asking for help, parents made suggestions including: the use of a visible and shared list of game features that were being worked on, and documentation to support the implementation of code that explained underlying principles and foundational code structures. The suggestion of the list of game features, used as both a shared organisational tool and as the basis for providing supporting documentation, became relevant in addressing the contradiction outlined above. Thus, early in P2, I used this dual function as a guiding principle to structure and present supporting resources in the form of themed features [^20b], which users could choose from, allowing them to take on features in the order that they chose. From this point onwards, resources which addressed some of the contradictions outlined above evolved rapidly, resulting in the creation of three main sources of documentation: quick start cards, written instructions, and code snippets. I now describe the process of creating these varied supporting documentation resources and the purposes they served.
 
@@ -315,7 +304,6 @@ This experience was not isolated to this family. In interview data, parent Maggi
 
 
 <!-- Finally, it highlighted a potential imbalance in facilitator attention, as participants more confident in coding sometimes created complex problems requiring significant time, which could leave others feeling less supported or valued. -->
-### Contradiction area 3: tensions and barriers in cultural aspects of the game-making activity
 
 Turning now to the surfaced tensions, barriers and resulting contradictions: these reflections show two strands of tension between activity system elements. One tension is between the object of working together and the emerging norms requiring close engagement with the technical aspects of coding, and a shift in the division of labour prioritising these aspects. Another tension concerned the division of labour itself. To participate fully in later design stages, participants would need to engage with text-based code regardless of their previous (and perhaps preferred) working practices. In addition, given that coding activities were ongoing, attempts to incorporate these team members at this stage would be disruptive to those existing divisions of labour.
 
@@ -343,7 +331,6 @@ The characteristic of flow in a social and cultural setting felt especially evoc
 
 <!-- NEW SECTION  -->
 
-### Contradiction area 3: tensions and barriers in cultural aspects of the game-making activity
 
 The focus now moves to the use of side missions to encourage varied creative practices. The side missions, framed within a drama scenario, aimed to encourage varied playtesting practices. In P3, I introduced a narrative framework to scaffold participant engagement in the form of a fictional scenario: an alien civilisation had contacted the group after seeing the games published in P2. They demanded that participants upload more games so the aliens could assess the worth of the human race [^35]. Within this scenario, participants were assigned printed side missions that were not directly related to game creation [^36a], some public and some kept secret,  that encouraged forms of interaction and exploration with playtesting similar to those described above. Examples of these missions are included in Table 5.sidemissions.
 
@@ -402,12 +389,24 @@ The structure of documentation, created in response to participant requests to a
 
 This stepped approach, which increases the complexity of the object of activity, is explicitly addressed only in limited CGD&P research. The work of Repenning on SGD operationalises this progression through guiding learners to undertake projects of increasing complexity, each implementing more advanced patterns. However, it differs in that no common template is provided, so learners must start from a blank slate each time [@repenning_scalable_2015]. This is notable, as I found in P1 that changes to the underlying code structure were stressful and unwelcome once participants had developed familiarity with it [^38].
 
-The four-stage approach outlined above shares characteristics with, and offers benefits aligned to, the Use Modify Create (UMC) pedagogy [@lytle_use_2019-1] [^38b]. Stage 1 uses playful game analysis as a precursor to game making [@cornish_game_2018]. Stage 2 and the design of the P2 starting game template helped participants rapidly build familiarity with code structures and tools (Use stage of UMC). Stage 3 aligns with Modify, where minimal changes have a large visual or behavioural impact, matching UMC’s guidance to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. The careful scaffolding of early coding experiences described earlier forced early and repeated transitions from use to modify, helping to overcome possible negative affect related to text-based coding. Stage 4 represents the most advanced level of this stage-based model. This includes implementing a more complex GDP from the menu (requiring new functions or significant changes to code). The decision to choose from a restricted set of options, rather than create from scratch, aligns with some adaptations of UMC. A further extension still would be to imagine, design, and implement a G
+The four-stage approach outlined above shares characteristics with, and offers benefits aligned to, the Use Modify Create (UMC) pedagogy [@lytle_use_2019-1] [^38b]. Stage 1 uses playful game analysis as a precursor to game making [@cornish_game_2018]. Stage 2 and the design of the P2 starting game template helped participants rapidly build familiarity with code structures and tools (Use stage of UMC). Stage 3 aligns with Modify, where minimal changes have a large visual or behavioural impact, matching UMC’s guidance to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. The careful scaffolding of early coding experiences described earlier forced early and repeated transitions from use to modify, helping to overcome possible negative affect related to text-based coding. Stage 4 represents the most advanced level of this stage-based model. This includes implementing a more complex GDP from the menu (requiring new functions or significant changes to code). The decision to choose from a restricted set of options, rather than create from scratch, aligns with some adaptations of UMC. A further extension still would be the choice to imagine, design and implement a GDP not included in the menu provided, this is a process that Dan and Toby take on in P3 by adapting the code template to create a Pac-Man like maze game [^pm].
+
+In this chapter the use of a design narrative processes informed by DBR practice [@hoadley_creating_2002] has been employed to share not only the detail of the resulting learning design but also the emerging tensions that drove them and replicable approach. With that aim in mind the following list shares links to currently online and reusable resources [^44].
+
+- P2-3 Starting Game Template: https://codepen.io/mrmick/pen/gbaOEgB?editors=0010
+- Menu of GDPs: https://jamm-labs.github.io/ggcp/ggc-examples/
+- Manual: http://3m.flossmanuals.net
+- Manual Splash page: https://jamm-labs.github.io/ggcp/manual
+
+Given the close alignment in the structural model with UMC, the contribution to the research landscape in relation to this aspect of my thesis is in the guiding use of GDPs as a structural support to guide the development between stages. This aspect of the research is developed in Chapter 6.
 
 <!-- DEVELOP THIS / LINKS/ -->
+
+
+
 ### Analysis and discussion in relation to existing research – half-baked and constructionist heuristics
 
-There is strong alignment between the underlying principles of the learning design described above and research on constructionist design heuristics [^39]. This part of the discussion briefly outlines these similarities using specific examples, and then explores a fundamental difference in approach related to the role of authenticity in the learning design. Of particular relevance is the constructionist principle to *choose black boxes carefully* [@resnick_reflections_2005]. Resnick et al. [-@resnick_reflections_2005] describe black boxes as abstractions that simplify or hide complex elements of the production process, creating a scaffolded learning experience while maintaining a boundary between the learner and the challenges of real-world coding. Based on Laurillard's [-@laurillard2020significance] interpretation of constructionist microworlds as being driven by affordances that support user experimentation and concept formation without relying on direct instruction, this learning design aligns with those core characteristics [^39b].
+There is strong alignment between the underlying principles of the learning design described above and research on constructionist design heuristics [^39]. This part of the discussion briefly outlines these similarities using specific examples, and then explores a fundamental difference in approach related to the role of authenticity in the learning design. Of particular relevance is the constructionist principle to *choose black boxes carefully* [@resnick_reflections_2005]. Resnick et al. [-@resnick_reflections_2005] describe black boxes as abstractions that simplify or hide complex elements of the production process, creating a scaffolded learning experience while maintaining a boundary between the learner and the challenges of interactive professional coding communities [^39a]. Based on Laurillard's [-@laurillard2020significance] interpretation of constructionist microworlds as being driven by affordances that support user experimentation and concept formation without relying on direct instruction, this learning design aligns with those core characteristics [^39b].
 
 However, the structure of the learning design should be interpreted as an adapted microworld, marked by greater authenticity and connection to professional coding environments and documentation. When compared to a classic microworld like LOGO’s Mathworld and its use of drawing turtles, my design is characterised by relatively porous boundaries between the structured learning environment and external, more authentic coding ecosystems.
 
@@ -455,6 +454,7 @@ In summer 2020, I began early dissemination of results in a peer-reviewed book [
 | Side missions which explore and celebrate different ‘maker types’ (from Bartle’s player types)          |        |     |
 
 Table 5.x – Key features of the 3M Game Making Model
+
 #### Harbour metaphor
 
 Building on earlier reflections on facilitation, a final analogy is offered here to illustrate how the design space balanced constraint and choice, structure and freedom: that of a harbour. Harbours are transitional spaces between land and sea, built to facilitate the movement of people and goods between these domains [^40]. In this metaphor, the Microworld functions as a vehicle for exploration, forming the base of the learning experience. It is designed to support input from technical communities through the lens of the facilitator's design experiences. This chapter has highlighted how input from professional communities was integrated into the Microworld vehicle of the starting template game. In addition, affordances within the template design and accompanying resources enabled participants to bring in interests from home into the new learning space.
