--- a/_posts/thesis_chapters/tocs/2025-7-6-Gdps_v6.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-7-6-Gdps_v6.md_toc.md
@@ -1,9 +1,12 @@
 -   [Findings: Game Design Patterns](#findings-game-design-patterns)
     -   [Introduction](#introduction)
-        -   [Recapping the framing GDPs within activity theory
-            concepts](#recapping-the-framing-gdps-within-activity-theory-concepts)
+        -   [Recapping the framing of GDPs within activity theory
+            concepts](#recapping-the-framing-of-gdps-within-activity-theory-concepts)
     -   [The role of GDPs in the personal appropriation of concepts and
         processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
+        -   [The role of GDPs in the personal appropriation of concepts
+            and
+            processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes-1)
     -   [GDPs used in the process of guided
         participation](#gdps-used-in-the-process-of-guided-participation)
         -   [Use of a menu of GDPs to assist project navigation and use
@@ -23,8 +26,6 @@
             practice, interest and funds of
             knowledge](#gdps-can-facilitate-the-use-of-wider-repertoires-of-practice-interest-and-funds-of-knowledge)
     -   [Discussion](#discussion)
-        -   [Gameplay design patterns as mediating cultural
-            resources](#gameplay-design-patterns-as-mediating-cultural-resources)
         -   [Developing flexible fluency](#developing-flexible-fluency)
     -   [Conclusion](#conclusion)
     -   [Footnotes](#footnotes)
