--- a/_posts/thesis_chapters/tocs/2025-7-5-Design_v18.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-7-5-Design_v18.md_toc.md
@@ -8,31 +8,19 @@
         -   [Contradiction area 1: involving organisational issues and
             the use of game programming and asset authoring
             tools](#contradiction-area-1-involving-organisational-issues-and-the-use-of-game-programming-and-asset-authoring-tools)
-            -   [Surfaced tensions and framed
-                contradiction](#surfaced-tensions-and-framed-contradiction)
         -   [Contradiction area 2: contradictions associated with
             project navigation and use of
             documentation](#contradiction-area-2-contradictions-associated-with-project-navigation-and-use-of-documentation)
-            -   [Description of what
-                happened](#description-of-what-happened)
-            -   [Surfaced tensions and framed
-                contradiction](#surfaced-tensions-and-framed-contradiction-1)
-            -   [Design response](#design-response)
-                -   [Quick Start Cards](#quick-start-cards)
-                -   [Structuring instructional tutorial resources and
-                    code
-                    snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
-            -   [Brief analysis](#brief-analysis)
         -   [Contradiction area 3: tensions and barriers in cultural
             aspects of the game-making
             activity](#contradiction-area-3-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [A staged based approach structured around a germ cell
+        -   [A stage-based approach structured around a germ cell
             concept of
-            GDPs](#a-staged-based-approach-structured-around-a-germ-cell-concept-of-gdps)
-        -   [Analysis and discussion in relation to existing research -
-            half-baked, and constructionist
-            heuristics](#analysis-and-discussion-in-relation-to-existing-research---half-baked-and-constructionist-heuristics)
+            GDPs](#a-stage-based-approach-structured-around-a-germ-cell-concept-of-gdps)
+        -   [Analysis and discussion in relation to existing research --
+            half-baked and constructionist
+            heuristics](#analysis-and-discussion-in-relation-to-existing-research-half-baked-and-constructionist-heuristics)
         -   [Synthesis of tensions and
             resolutions](#synthesis-of-tensions-and-resolutions)
         -   [3M game making (Meta) model of pedagogical elements of the
